Change Users HTML page to match DML

--- a/Game_Rounds.html
+++ b/Game_Rounds.html
@@ -3,13 +3,13 @@
 <table>
     <tr>
         <th>Round ID</th>
-        <th>User ID</th>
+        <th>Username</th>
         <th>Score</th>
         <th>Time</th>
     </tr>
     <tr>
         <td>1</td>
-        <td>2</td>
+        <td>Annette_Tongsak</td>
         <td>NULL</td>
         <td>NULL</td>
     </tr>
@@ -21,19 +21,19 @@
     </tr>
     <tr>
         <td>3</td>
-        <td>4</td>
+        <td>Deepti_Ravidath</td>
         <td>90</td>
         <td>01:03:19</td>
     </tr>
     <tr>
         <td>4</td>
-        <td>3</td>
+        <td>Oria_Weng</td>
         <td>80</td>
         <td>00:56:11</td>
     </tr>
     <tr>
         <td>5</td>
-        <td>5</td>
+        <td>Jon</td>
         <td>60</td>
         <td>00:23:21</td>
     </tr>
