Wrap and format Users

--- a/Users.html
+++ b/Users.html
@@ -1,42 +1,51 @@
-<h1>Users</h1>
-<p>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</p>
-<h2>All Users</h2>
-<table>
-    <tr>
-        <th>User ID</th>
-        <th>Username</th>
-        <th>Password</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>Rob_Hess</td>
-        <td>12345</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Annette_Tongsak</td>
-        <td>beefyblast</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Oria_Weng</td>
-        <td>TotallySecure!</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>Deepti_Ravidath</td>
-        <td>resume.builder</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>Jon</td>
-        <td>yum-bananas</td>
-    </tr>
-</table>
-
-<h2>Add User</h2>
-<form>
-    <label for="name">Username: </label><input type="text" name="name" id="name" required>
-    <label for="password">Password: </label><input type="text" name="password" id="name" required>
-    <input type="submit">
-</form>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>DevDynasty Question Stats - Users</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>Users</h1>
+        <nav>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
+        <h2>Browse Users</h2>
+        <table>
+            <tr>
+                <th>User ID</th>
+                <th>Username</th>
+                <th>Password</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Rob_Hess</td>
+                <td>12345</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Annette_Tongsak</td>
+                <td>beefyblast</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Oria_Weng</td>
+                <td>TotallySecure!</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Deepti_Ravidath</td>
+                <td>resume.builder</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Jon</td>
+                <td>yum-bananas</td>
+            </tr>
+        </table>
+    
+        <h2>Add User</h2>
+        <form>
+            <label for="name">Username: </label><input type="text" name="name" id="name" required>
+            <label for="password">Password: </label><input type="text" name="password" id="name" required>
+            <input type="submit">
+        </form>
+    </body>
+</html>
