Make styling and formatting more consistent

--- a/Game_Rounds.html
+++ b/Game_Rounds.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            <title>DevDynasty Question Stats - Game Rounds</title>
-        </title>
+        <title>DevDynasty Question Stats - Game_Rounds</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
         <h1>Game Rounds</h1>
-        <h2>All Game Rounds</h2>
-        <table>
-            <tr>
-                <th>Round ID</th>
-                <th>Username</th>
-                <th>Score</th>
-                <th>Time</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Annette_Tongsak</td>
-                <td>NULL</td>
-                <td>NULL</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>NULL</td>
-                <td>100</td>
-                <td>00:32:01</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Deepti_Ravidath</td>
-                <td>90</td>
-                <td>01:03:19</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Oria_Weng</td>
-                <td>80</td>
-                <td>00:56:11</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Jon</td>
-                <td>60</td>
-                <td>00:23:21</td>
-            </tr>
-        </table>
+        <nav>[ <a href="Users.html">Users</a> | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
+        <div class="box">
+            <h2>Browse Game_Rounds</h2>
+            <table>
+                <tr>
+                    <th>Round ID</th>
+                    <th>Username</th>
+                    <th>Score</th>
+                    <th>Time</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Annette_Tongsak</td>
+                    <td>NULL</td>
+                    <td>NULL</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>NULL</td>
+                    <td>100</td>
+                    <td>00:32:01</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Deepti_Ravidath</td>
+                    <td>90</td>
+                    <td>01:03:19</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Oria_Weng</td>
+                    <td>80</td>
+                    <td>00:56:11</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Jon</td>
+                    <td>60</td>
+                    <td>00:23:21</td>
+                </tr>
+            </table>
+        </div>
     
-        <h2>Add Game Round</h2>
+        <h2>Insert Game_Round</h2>
         <form>
             <div>
                 <label for="user">Username: </label><select name="user" required>
