--- a/rounds_questions.html
+++ b/rounds_questions.html
@@ -2,40 +2,43 @@
 <html>
     <head>
         <title>DevDynasty Question Stats - Rounds_Questions</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Rounds_Questions</h1>
-        <p>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</p>
-        <p><b>Browse Rounds_Questions</b></p>
-        <table>
-            <tr>
-              <th>roundID</th>
-              <th>questionID</th>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>1</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>3</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>1</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>3</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>3</td>
-            </tr>
-        </table>
+        <nav>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
+        <div class="box">
+            <h2>Browse Rounds_Questions</h2>
+            <table>
+                <tr>
+                  <th>roundID</th>
+                  <th>questionID</th>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>3</td>
+                </tr>
+            </table>
+        </div>
         
-        <div class="box-2">
-            <p><b>Insert Round_Question</b></p>
+        <div class="box">
+            <h2>Insert Round_Question</h2>
             <form action="" method="get" class="form-example">
                 <div class="form-example">
                     <label for="roundID">Round ID:</label>
@@ -50,7 +53,6 @@
                 </div>
                 <div class="form-example">
                     <label for="questionID">Question ID:</label>
-
                     <select name="questionID" id="questionID">
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -65,7 +67,7 @@
         </div>
         
         <div class="box">
-            <p><b>Update Round_Question</b></p>
+            <h2>Update Round_Question</h2>
             <form action="" method="get" class="form-example">
                 <div class="form-example">
                     <label for="roundID">Round ID:</label>
@@ -118,8 +120,8 @@
             </form>
         </div>
 
-        <div class="box-2">
-            <p><b>Delete Round_Question</b></p>
+        <div class="box">
+            <h2>Delete Round_Question</h2>
             <form action="" method="get" class="form-example">
                 <div class="form-example">
                     <label for="roundID">Round ID:</label>
