--- a/Users.html
+++ b/Users.html
@@ -7,45 +7,49 @@
     <body>
         <h1>Users</h1>
         <nav>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
-        <h2>Browse Users</h2>
-        <table>
-            <tr>
-                <th>User ID</th>
-                <th>Username</th>
-                <th>Password</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Rob_Hess</td>
-                <td>12345</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Annette_Tongsak</td>
-                <td>beefyblast</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Oria_Weng</td>
-                <td>TotallySecure!</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Deepti_Ravidath</td>
-                <td>resume.builder</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Jon</td>
-                <td>yum-bananas</td>
-            </tr>
-        </table>
+        <div class="box">
+            <h2>Browse Users</h2>
+            <table>
+                <tr>
+                    <th>User ID</th>
+                    <th>Username</th>
+                    <th>Password</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Rob_Hess</td>
+                    <td>12345</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Annette_Tongsak</td>
+                    <td>beefyblast</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Oria_Weng</td>
+                    <td>TotallySecure!</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Deepti_Ravidath</td>
+                    <td>resume.builder</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Jon</td>
+                    <td>yum-bananas</td>
+                </tr>
+            </table>
+        </div>
     
-        <h2>Add User</h2>
-        <form>
-            <label for="name">Username: </label><input type="text" name="name" id="name" required>
-            <label for="password">Password: </label><input type="text" name="password" id="name" required>
-            <input type="submit">
-        </form>
+        <div class="box">
+            <h2>Insert User</h2>
+            <form>
+                <label for="name">Username: </label><input type="text" name="name" id="name" required>
+                <label for="password">Password: </label><input type="text" name="password" id="name" required>
+                <input type="submit">
+            </form>
+        </div>
     </body>
 </html>
