--- a/rounds_questions.html
+++ b/rounds_questions.html
@@ -41,9 +41,9 @@
             <h2>Insert Round_Question</h2>
             <form action="" method="get" class="form-example">
                 <div class="form-example">
-                    <label for="roundID">Round ID:</label>
+                    <label for="roundID-insert">Round ID:</label>
 
-                    <select name="roundID" id="roundID_to_update">
+                    <select name="roundID-insert" id="roundID-insert">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -52,8 +52,8 @@
                     </select>
                 </div>
                 <div class="form-example">
-                    <label for="questionID">Question ID:</label>
-                    <select name="questionID" id="questionID">
+                    <label for="questionID-insert">Question ID:</label>
+                    <select name="questionID-insert" id="questionID-insert">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -70,9 +70,9 @@
             <h2>Update Round_Question</h2>
             <form action="" method="get" class="form-example">
                 <div class="form-example">
-                    <label for="roundID">Round ID:</label>
+                    <label for="roundID-update">Round ID:</label>
 
-                    <select name="roundID" id="roundID">
+                    <select name="roundID-update" id="roundID-update">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -91,9 +91,9 @@
                 </div>
                 <br>
                 <div class="form-example">
-                    <label for="roundID">Change Round ID:</label>
+                    <label for="roundID-update-change">Change Round ID:</label>
 
-                    <select name="roundID" id="roundID">
+                    <select name="roundID-update-change" id="roundID-update-change">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -102,9 +102,9 @@
                     </select>
                 </div>
                 <div class="form-example">
-                    <label for="roundID">Change Question ID:</label>
+                    <label for="roundID-update">Change Question ID:</label>
 
-                    <select name="roundID" id="roundID">
+                    <select name="roundID-update" id="roundID-update">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -124,9 +124,9 @@
             <h2>Delete Round_Question</h2>
             <form action="" method="get" class="form-example">
                 <div class="form-example">
-                    <label for="roundID">Round ID:</label>
+                    <label for="roundID-delete">Round ID:</label>
 
-                    <select name="roundID" id="roundID">
+                    <select name="roundID-delete" id="roundID-delete">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -135,9 +135,9 @@
                     </select>
                 </div>
                 <div class="form-example">
-                    <label for="questionID">Question ID:</label>
+                    <label for="questionID-delete">Question ID:</label>
 
-                    <select name="questionID" id="questionID">
+                    <select name="questionID-delete" id="questionID-delete">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
