--- a/Questions.html
+++ b/Questions.html
@@ -14,29 +14,34 @@
                 <th>Question ID</th>
                 <th>Question Text</th>
                 <th>Type</th>
+                <th></th>
             </tr>
             <tr>
                 <td>1</td>
                 <td>How have you dealt with a team member not pulling their weight in the past?</td>
                 <td>Behavioral</td>
+                <td><button id="delete">Delete</button></td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Describe a time when you faced a tight deadline or a high-pressure situation. How did you handle the stress, and what was the outcome?</td>
                 <td>Behavioral</td>
+                <td><button id="delete">Delete</button></td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Consider two sorting algorithms: Algorithm A with a time complexity of O(n log n) and Algorithm B with a time complexity of O(n^2). Under what conditions might you choose Algorithm B over Algorithm A?</td>
                 <td>Technical</td>
+                <td><button id="delete">Delete</button></td>
             </tr>
         </table>
     </div>
     
     <div class="box">
         <h2>Insert Question</h2>
-        <form>
-            <label for="text">Question text: </label><input type="text" name="text" id="text" required>
+        <form action="" method="get" class="form-example">
+            <label for="text">Question text: </label>
+            <textarea name="text" id="text" required></textarea>
             <label for="type">Type: </label><select name="type" id="type" required>
                 <option selected>Behavioral</option>
                 <option>Technical</option>
