--- a/Users.html
+++ b/Users.html
@@ -14,38 +14,44 @@
                     <th>User ID</th>
                     <th>Username</th>
                     <th>Password</th>
+                    <th></th>
                 </tr>
                 <tr>
                     <td>1</td>
                     <td>Rob_Hess</td>
                     <td>12345</td>
+                    <td><button id="delete">Delete</button></td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Annette_Tongsak</td>
                     <td>beefyblast</td>
+                    <td><button id="delete">Delete</button></td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>Oria_Weng</td>
                     <td>TotallySecure!</td>
+                    <td><button id="delete">Delete</button></td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>Deepti_Ravidath</td>
                     <td>resume.builder</td>
+                    <td><button id="delete">Delete</button></td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>Jon</td>
                     <td>yum-bananas</td>
+                    <td><button id="delete">Delete</button></td>
                 </tr>
             </table>
         </div>
     
         <div class="box">
             <h2>Insert User</h2>
-            <form>
+            <form action="" method="get" class="form-example">
                 <label for="name">Username: </label><input type="text" name="name" id="name" required>
                 <label for="password">Password: </label><input type="text" name="password" id="name" required>
                 <input type="submit">
