Add navbar and make separate grid styles for textareas

--- a/Game_Rounds.html
+++ b/Game_Rounds.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Game Rounds</h1>
-        <nav>[ <a href="Users.html">Users</a> | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
+        <nav>[ <a href="Users.html">Users</a> | <a href="Questions.html">Questions</a> | <a href="answers.html">Answers</a> | <a href="question_types.html">Question_Types</a> | <a href="Game_Rounds.html">Game_Rounds</a> | <a href="rounds_questions.html">Rounds_Questions</a> ]</nav>
         <div class="box">
             <h2>Browse Game_Rounds</h2>
             <table>
