--- a/Users.html
+++ b/Users.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Users</h1>
-        <nav>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
+        <nav>[ <a href="Users.html">Users</a> | <a href="Questions.html">Questions</a> | <a href="answers.html">Answers</a> | <a href="question_types.html">Question_Types</a> | <a href="Game_Rounds.html">Game_Rounds</a> | <a href="rounds_questions.html">Rounds_Questions</a> ]</nav>
         <div class="box">
             <h2>Browse Users</h2>
             <table>
@@ -52,8 +52,8 @@
         <div class="box">
             <h2>Insert User</h2>
             <form action="" method="get" class="form-example">
-                <label for="name">Username: </label><input type="text" name="name" id="name" required>
-                <label for="password">Password: </label><input type="text" name="password" id="name" required>
+                <div class="form-example"><label for="name">Username: </label><input type="text" name="name" id="name" required></div>
+                <div class="form-example"><label for="password">Password: </label><input type="text" name="password" id="name" required></div>
                 <input type="submit">
             </form>
         </div>
