--- a/question_types.html
+++ b/question_types.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Question_Types</h1>
-        <nav>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
+        <nav>[ <a href="Users.html">Users</a> | <a href="Questions.html">Questions</a> | <a href="answers.html">Answers</a> | <a href="question_types.html">Question_Types</a> | <a href="Game_Rounds.html">Game_Rounds</a> | <a href="rounds_questions.html">Rounds_Questions</a> ]</nav>
         <div class="box">
             <h2>Browse Question_Types</h2>
             <table>
@@ -36,7 +36,6 @@
                 <label for="name">Name: </label>
                 <input type="text" name="name" id="name" required />
                 </div>
-                <br>
                 <div class="form-example">
                 <input type="submit" value="Insert Question_Type" />
                 </div>
