--- a/answers.html
+++ b/answers.html
@@ -4,21 +4,9 @@
         <title>DevDynasty Question Stats - Answers</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <style>
-        #text {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        /* input[type="text"] {
-            width: 300px; 
-            height: 60px; 
-            padding: 5px;
-        } */
-    </style>
     <body>
         <h1>Answers</h1>
-        <nav>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
+        <nav>[ <a href="Users.html">Users</a> | <a href="Questions.html">Questions</a> | <a href="answers.html">Answers</a> | <a href="question_types.html">Question_Types</a> | <a href="Game_Rounds.html">Game_Rounds</a> | <a href="rounds_questions.html">Rounds_Questions</a> ]</nav>
         <div class="box">
             <h2>Browse Answers</h2>
             <table>
@@ -124,8 +112,8 @@
         
                     </select>
                 </div>
-                <div class="form-example">
-                    <label for="text">Text: </label>
+                <div class="textarea-input">
+                    <label for="text">Answer text: </label>
                     <textarea name="text" id="text" required></textarea>
                 </div>
                 
