--- a/rounds_questions.html
+++ b/rounds_questions.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Rounds_Questions</h1>
-        <nav>[ Users | Questions | Answers | Question_Types | Game_Rounds | Rounds_Questions ]</nav>
+        <nav>[ <a href="Users.html">Users</a> | <a href="Questions.html">Questions</a> | <a href="answers.html">Answers</a> | <a href="question_types.html">Question_Types</a> | <a href="Game_Rounds.html">Game_Rounds</a> | <a href="rounds_questions.html">Rounds_Questions</a> ]</nav>
         <div class="box">
             <h2>Browse Rounds_Questions</h2>
             <table>
@@ -144,7 +144,6 @@
                     </select>
                 </div>
 
-                <br>
                 <div class="form-example">
                 <input type="submit" value="Delete Rounds_Questions" />
                 </div>
