--- a/answers.html
+++ b/answers.html
@@ -96,11 +96,11 @@
             <h2>Insert Answer<h2>
             <form action="" method="get" class="form-example">
                 <div class="form-example">
-                    <label for="questionID">Question ID:</label>
+                    <label for="questionID">Question Text:</label>
                     <select name="questionID" id="questionID">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
+                    <option value="1">How have you dealt with a team member not pulling their weight in the past?</option>
+                    <option value="2">Describe a time when you faced a tight deadline or a high-pressure situation. How did you handle the stress, and what was the outcome?</option>
+                    <option value="3">Consider two sorting algorithms: Algorithm A with a time complexity of O(n log n) and Algorithm B with a time complexity of O(n^2). Under what conditions might you choose Algorithm B over Algorithm A?</option>
                     </select>
                 </div>
                 <div class="form-example">
